--- a/java/tool/pom.xml
+++ b/java/tool/pom.xml
@@ -22,7 +22,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3-SNAPSHOT</version>
         </dependency>
@@ -42,6 +42,14 @@
             <version>${jsersey-version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>apache-snapshots</id>
+            <name>Apache snapshots</name>
+            <url>http://repository.apache.org/snapshots</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
