--- a/java/pom.xml
+++ b/java/pom.xml
@@ -20,6 +20,9 @@
 
     <scm>
         <connection>scm:git:git@github.com:nedap/retail-services-API.git</connection>
+        <developerConnection>scm:git:git@github.com:nedap/retail-services.git</developerConnection>
+        <url>https://github.com/nedap/retail-services-API</url>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
@@ -58,7 +61,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.4.2</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
