--- a/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
+++ b/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="oauth.config.sample" />
     <None Include="oauth.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
