--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -35,6 +35,17 @@
             <artifactId>jersey-json</artifactId>
             <version>${jsersey-version}</version>
         </dependency>
+        <!-- Gson: Java to Json conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.6</version>
+        </dependency>    
     </dependencies>
 
 </project>
