--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -35,6 +35,21 @@
             <artifactId>jersey-json</artifactId>
             <version>${jsersey-version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nedap.cube</groupId>
+            <artifactId>common-comm</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
