--- a/java/tool/pom.xml
+++ b/java/tool/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.nedap.retail.services</groupId>
             <artifactId>messages</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
