--- a/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
+++ b/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
@@ -39,8 +39,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErpExample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
