--- a/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
+++ b/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Erp.V1\GtinQuantity.cs" />
     <Compile Include="OAuth\ApiCaller.cs" />
+    <Compile Include="System.V1\StatusDetail.cs" />
+    <Compile Include="System.V1\System.cs" />
+    <Compile Include="System.V1\SystemStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
