--- a/java/tool/pom.xml
+++ b/java/tool/pom.xml
@@ -74,7 +74,7 @@
                         -->
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.nedap.retail.services.tool.push.App</mainClass>
+                            <mainClass>com.nedap.retail.services.tool.App</mainClass>
                         </transformer>
                     </transformers> 
                     <filters>
