[#76263906] DateTime event_time Updated tool project messages dependency to 1.14

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/java/messages/target/
-/java/client/target/
-/java/tool/target/
+**/.classpath
+**/.project
+**/.settings
+**/target
 .DS_Store
 dependency-reduced-pom.xml
 
