[#79282960] Added example code for ERP and Article API

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -28,6 +28,7 @@
     <modules>
         <module>messages</module>
         <module>tool</module>
+        <module>examples</module>
     </modules>
 
     <dependencies>
