--- a/java/examples/erparticle/pom.xml
+++ b/java/examples/erparticle/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.nedap.retail.services</groupId>
             <artifactId>messages</artifactId>
-            <version>1.16</version>
+            <version>${nedap-retail-messages-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
