--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.nedap.retail.services</groupId>
     <artifactId>messages</artifactId>
-    <version>1.19</version>
+    <version>${nedap-retail-messages-version}</version>
 
     <name>Nedap Retail Api Client</name>
     <packaging>jar</packaging>
@@ -52,6 +52,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
         </dependency>
         <!-- Gson: Java to Json conversion -->
         <dependency>
