--- a/java/tool/pom.xml
+++ b/java/tool/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.nedap.retail.services</groupId>
             <artifactId>messages</artifactId>
-            <version>1.15</version>
+            <version>${nedap-retail-messages-version}</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
