--- a/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
+++ b/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
@@ -53,18 +53,18 @@
     <Compile Include="Epc.V2\DifferenceListResponse.cs" />
     <Compile Include="Epc.V2\EpcV2Endpoint.cs" />
     <Compile Include="Epc.V2\StockGtinResponse.cs" />
-    <Compile Include="Epcis.V1.1\Action.cs" />
-    <Compile Include="Epcis.V1.1\AggregationEvent.cs" />
-    <Compile Include="Epcis.V1.1\BusinessTransaction.cs" />
-    <Compile Include="Epcis.V1.1\CaptureEpcisRequest.cs" />
-    <Compile Include="Epcis.V1.1\Destination.cs" />
-    <Compile Include="Epcis.V1.1\EpcisEvent.cs" />
-    <Compile Include="Epcis.V1.1\EpcisV1_1Endpoint.cs" />
-    <Compile Include="Epcis.V1.1\ObjectEvent.cs" />
-    <Compile Include="Epcis.V1.1\QuantityElement.cs" />
-    <Compile Include="Epcis.V1.1\Source.cs" />
-    <Compile Include="Epcis.V1.1\TransactionEvent.cs" />
-    <Compile Include="Epcis.V1.1\TransformationEvent.cs" />
+    <Compile Include="Epcis.V1_1\Action.cs" />
+    <Compile Include="Epcis.V1_1\AggregationEvent.cs" />
+    <Compile Include="Epcis.V1_1\BusinessTransaction.cs" />
+    <Compile Include="Epcis.V1_1\CaptureEpcisRequest.cs" />
+    <Compile Include="Epcis.V1_1\Destination.cs" />
+    <Compile Include="Epcis.V1_1\EpcisEvent.cs" />
+    <Compile Include="Epcis.V1_1\EpcisV1_1Endpoint.cs" />
+    <Compile Include="Epcis.V1_1\ObjectEvent.cs" />
+    <Compile Include="Epcis.V1_1\QuantityElement.cs" />
+    <Compile Include="Epcis.V1_1\Source.cs" />
+    <Compile Include="Epcis.V1_1\TransactionEvent.cs" />
+    <Compile Include="Epcis.V1_1\TransformationEvent.cs" />
     <Compile Include="Erp.V1\CaptureRequest.cs" />
     <Compile Include="Erp.V1\CaptureResponse.cs" />
     <Compile Include="Erp.V1\ErpV1Endpoint.cs" />
