--- a/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
+++ b/csharp/NedapRetailApiClient/ExampleApplication/ExampleApplication.csproj
@@ -43,6 +43,7 @@
     <Compile Include="EpcExample.cs" />
     <Compile Include="EpcisExample.cs" />
     <Compile Include="ErpExample.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemExample.cs" />
