--- a/java/examples/pom.xml
+++ b/java/examples/pom.xml
@@ -78,7 +78,7 @@
                         -->
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.nedap.retail.services.examples.erparticle.App</mainClass>
+                            <mainClass>com.nedap.retail.services.examples.App</mainClass>
                         </transformer>
                     </transformers>
                     <filters>
@@ -112,7 +112,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <executable>java</executable>
-                    <mainClass>com.nedap.retail.services.examples.erparticle.App</mainClass>
+                    <mainClass>com.nedap.retail.services.examples.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
