--- a/java/examples/pom.xml
+++ b/java/examples/pom.xml
@@ -26,11 +26,6 @@
             <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>${jsersey-version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
             <version>${slf4j-version}</version>
@@ -78,7 +73,7 @@
                         -->
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.nedap.retail.services.examples.erparticle.App</mainClass>
+                            <mainClass>com.nedap.retail.services.examples.App</mainClass>
                         </transformer>
                     </transformers>
                     <filters>
@@ -112,7 +107,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <executable>java</executable>
-                    <mainClass>com.nedap.retail.services.examples.erparticle.App</mainClass>
+                    <mainClass>com.nedap.retail.services.examples.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
