--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <junit-version>4.11</junit-version>
         <slf4j-version>1.7.7</slf4j-version>
-        <jsersey-version>1.6</jsersey-version>
+        <jersey-version>2.17</jersey-version>
         <fasterxml.version>2.3.3</fasterxml.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -38,14 +38,14 @@
             <version>${slf4j-version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
+            <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>${jsersey-version}</version>
+            <version>${jersey-version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>${jsersey-version}</version>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${jersey-version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -61,6 +61,11 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
             <version>${fasterxml.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.2</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
