--- a/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
+++ b/csharp/NedapRetailApiClient/Nedap.Retail.Api/Nedap.Retail.Api.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Epcis.V1_1\Action.cs" />
     <Compile Include="Epcis.V1_1\AggregationEvent.cs" />
     <Compile Include="Epcis.V1_1\BusinessTransaction.cs" />
+    <Compile Include="Epcis.V1_1\ParameterObject.cs" />
+    <Compile Include="Epcis.V1_1\QueryEpcisRequest.cs" />
     <Compile Include="Epcis.V1_1\CaptureEpcisRequest.cs" />
     <Compile Include="Epcis.V1_1\Destination.cs" />
     <Compile Include="Epcis.V1_1\EpcisEvent.cs" />
