[#99637318] Update dependencies and remove outdated tool

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nedap.retail.services</groupId>
@@ -11,9 +12,9 @@
     <packaging>pom</packaging>
 
     <properties>
-        <junit-version>4.9</junit-version>
-        <slf4j-version>1.7.7</slf4j-version>
-        <jsersey-version>1.6</jsersey-version>
+        <junit-version>4.12</junit-version>
+        <slf4j-version>1.7.12</slf4j-version>
+        <jersey-version>2.19</jersey-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <nedap-retail-messages-version>1.25</nedap-retail-messages-version>
@@ -28,7 +29,6 @@
 
     <modules>
         <module>messages</module>
-        <module>tool</module>
         <module>examples</module>
     </modules>
 
