--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.nedap.retail.services</groupId>
+    <parent>
+        <groupId>com.nedap.retail.services</groupId>
+        <artifactId>api</artifactId>
+        <version>1.34-SNAPSHOT</version>
+    </parent>
+
     <artifactId>messages</artifactId>
     <version>1.34-SNAPSHOT</version>
 
@@ -10,9 +16,6 @@
     <packaging>jar</packaging>
 
     <properties>
-        <junit-version>4.11</junit-version>
-        <slf4j-version>1.7.7</slf4j-version>
-        <jersey-version>2.17</jersey-version>
         <fasterxml.version>2.3.3</fasterxml.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -94,7 +97,7 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
@@ -131,7 +134,6 @@
                 <version>2.5.3</version>
                 <configuration>
                     <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                     <xmlOutput>true</xmlOutput>
                 </configuration>
             </plugin>
