--- a/java/pom.xml
+++ b/java/pom.xml
@@ -15,9 +15,9 @@
         <junit-version>4.12</junit-version>
         <slf4j-version>1.7.12</slf4j-version>
         <jersey-version>2.19</jersey-version>
+        <maven-surefire-version>2.18.1</maven-surefire-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <nedap-retail-messages-version>1.25</nedap-retail-messages-version>
     </properties>
 
     <scm>
@@ -31,15 +31,6 @@
         <module>messages</module>
         <module>examples</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit-version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
@@ -55,24 +46,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.13</version>
-                <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
+                <version>${maven-surefire-version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.4.2</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>true</downloadJavadocs>
-                    <wtpversion>1.5</wtpversion>
-                </configuration>
             </plugin>
         </plugins>
     </build>
