--- a/java/pom.xml
+++ b/java/pom.xml
@@ -7,7 +7,24 @@
     <artifactId>api</artifactId>
     <version>1.35-SNAPSHOT</version>
     <name>Netap Retail Services API</name>
+    <description>Reference implementations and test tools for using the Nedap Retail API's</description>
     <url>http://www.nedap-retail.com/</url>
+
+    <!--<licenses>
+        <license>
+            <name>To be discussed</name>
+            <url>...</url>
+        </license>
+    </licenses>-->
+
+    <developers>
+        <developer>
+            <name>Nedap Retail</name>
+            <email>idcloud@nedap.com</email>
+            <organization>Nedap Retail</organization>
+            <organizationUrl>http://www.nedap-retail.com</organizationUrl>
+        </developer>
+    </developers>
 
     <packaging>pom</packaging>
 
@@ -52,6 +69,30 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.4.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
