--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -10,21 +10,14 @@
     </parent>
 
     <artifactId>messages</artifactId>
-    <version>1.35-SNAPSHOT</version>
-
-    <name>Nedap Retail Api Client</name>
     <packaging>jar</packaging>
+    <name>Nedap Retail API client</name>
+    <description>Client and messages for communicating with the Nedap Retail APIs</description>
+    <url>http://www.nedap-retail.com/</url>
 
     <properties>
         <fasterxml.version>2.3.3</fasterxml.version>
     </properties>
-
-    <scm>
-        <connection>scm:git:git@github.com:nedap/retail-services-API.git</connection>
-        <developerConnection>scm:git:git@github.com:nedap/retail-services.git</developerConnection>
-        <url>https://github.com/nedap/retail-services-API</url>
-        <tag>HEAD</tag>
-    </scm>
 
     <dependencies>
         <dependency>
@@ -69,19 +62,19 @@
             <version>1.9.2</version>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.3</version>
+            <version>2.8.2</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -101,10 +94,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${maven-compiler-version}</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -115,16 +108,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.4.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.5.3</version>
-                <configuration>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <xmlOutput>true</xmlOutput>
-                </configuration>
+                <version>${maven-release-version}</version>
             </plugin>
         </plugins>
     </build>
