--- a/java/pom.xml
+++ b/java/pom.xml
@@ -27,6 +27,7 @@
         <maven-surefire-version>2.18.1</maven-surefire-version>
         <maven-release-version>2.5.2</maven-release-version>
         <maven-compiler-version>3.3</maven-compiler-version>
+        <maven-deploy-version>2.8.2</maven-deploy-version>
         <java-version>1.7</java-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -35,6 +36,7 @@
     <scm>
         <connection>scm:git:git@github.com:nedap/retail-services-API.git</connection>
         <url>https://github.com/nedap/retail-services-API</url>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
@@ -94,10 +96,15 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>${maven-release-version}</version>
                 <configuration>
-                    <goals>gpg:sign deploy</goals>
+                    <goals>clean verify gpg:sign deploy:deploy</goals>
                 </configuration>
             </plugin>
         </plugins>
