--- a/java/pom.xml
+++ b/java/pom.xml
@@ -29,7 +29,8 @@
     <properties>
         <junit-version>4.12</junit-version>
         <slf4j-version>1.7.12</slf4j-version>
-        <jersey-version>2.19</jersey-version>
+        <jersey-version>2.22.1</jersey-version>
+        <fasterxml.version>2.5.4</fasterxml.version>
         <maven-surefire-version>2.18.1</maven-surefire-version>
         <maven-release-version>2.5.2</maven-release-version>
         <maven-compiler-version>3.3</maven-compiler-version>
