--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -14,6 +14,10 @@
     <description>Client and messages for communicating with the Nedap Retail APIs</description>
     <url>http://www.nedap-retail.com/</url>
 
+    <properties>
+        <swagger-annotations-version>1.5.9</swagger-annotations-version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -66,6 +70,11 @@
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger-annotations-version}</version>
         </dependency>
     </dependencies>
 
