--- a/java/messages/pom.xml
+++ b/java/messages/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.nedap.retail.services</groupId>
         <artifactId>api</artifactId>
-        <version>1.49-SNAPSHOT</version>
+        <version>1.48</version>
     </parent>
 
     <artifactId>messages</artifactId>
