--- a/java/examples/pom.xml
+++ b/java/examples/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>examples</artifactId>
     <packaging>jar</packaging>
     <name>Nedap Retail API examples</name>
+    <version>2.0-SNAPSHOT</version>
     <description>Examples on how to use the Nedap Retail APIs</description>
     <url>http://www.nedap-retail.com/</url>
 
