[#139657691] Adapted Csharp example to new swagger definitions.

--- a/csharp/examples/NedapRetailApiExample/NedapRetailApiExample.config
+++ b/csharp/examples/NedapRetailApiExample/NedapRetailApiExample.config
@@ -4,9 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="OauthClientId" value="com.nedap.retail.si.1234567ABC" />
-    <add key="OauthSecret" value="a" />
-    <add key="OauthUrl" value="http://localhost:9091" />
-    <add key="ApiUrl" value="http://localhost:9090" />
+    <add key="AccessToken" value="access_token" />
+    <add key="ApiUrl" value="https://api-test.nedapretail.com/" />
   </appSettings>
 </configuration>
