--- a/csharp/examples/NedapRetailApiExample/App.config
+++ b/csharp/examples/NedapRetailApiExample/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="AccessToken" value="access_token" />
+    <add key="AccessToken" value="" />
     <add key="ApiUrl" value="https://api-test.nedapretail.com/" />
   </appSettings>
 </configuration>
