[#139657691] Changed URL in app.config from test to production.

--- a/csharp/examples/NedapRetailApiExample/App.config
+++ b/csharp/examples/NedapRetailApiExample/App.config
@@ -5,6 +5,6 @@
     </startup>
   <appSettings>
     <add key="AccessToken" value="" />
-    <add key="ApiUrl" value="https://api-test.nedapretail.com/" />
+    <add key="ApiUrl" value="https://api.nedapretail.com/" />
   </appSettings>
 </configuration>
