--- a/java/client/pom.xml
+++ b/java/client/pom.xml
@@ -4,33 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.nedap.retail.services</groupId>
-        <artifactId>api</artifactId>
-        <version>2.0-SNAPSHOT</version>
-    </parent>
-
     <groupId>com.nedap.retail.client</groupId>
     <artifactId>api-client</artifactId>
     <version>2.0-SNAPSHOT</version>
+    <name>Nedap Retail !D Cloud API client library</name>
     <description>API client for use with the Nedap Retail !D Cloud APIs</description>
     <url>http://www.nedap-retail.com/</url>
 
     <properties>
+        <swagger-input-file>${project.basedir}/../../openapi/idcloud-openapi.json</swagger-input-file>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-core-version>1.5.9</swagger-core-version>
         <swagger-codegen-maven-plugin-version>2.2.1</swagger-codegen-maven-plugin-version>
-        <jersey-version>2.22.2</jersey-version>
         <jackson-version>2.7.5</jackson-version>
         <jodatime-version>2.9.4</jodatime-version>
         <jersey-version>2.24.1</jersey-version>
-        <fasterxml.version>2.8.4</fasterxml.version>
-        <maven-surefire-version>2.18.1</maven-surefire-version>
-        <maven-release-version>2.5.2</maven-release-version>
-        <maven-compiler-version>3.3</maven-compiler-version>
-        <maven-deploy-version>2.8.2</maven-deploy-version>
-        <java-version>1.7</java-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <junit-version>4.12</junit-version>
+        <slf4j-version>1.7.21</slf4j-version>
+        <java-version>1.8</java-version>
     </properties>
 
     <dependencies>
@@ -60,17 +51,7 @@
         <!-- JSON processing: jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${jackson-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>${jackson-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
             <version>${jackson-version}</version>
         </dependency>
         <dependency>
@@ -90,15 +71,20 @@
             <artifactId>migbase64</artifactId>
             <version>2.2</version>
         </dependency>
+
         <!-- test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
         </dependency>
+
         <!-- logger -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
+            <version>${slf4j-version}</version>
         </dependency>
     </dependencies>
 
@@ -115,7 +101,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/../../openapi/idcloud-openapi.json</inputSpec>
+                            <inputSpec>${swagger-input-file}</inputSpec>
                             <language>java</language>
                             <apiPackage>com.nedap.retail.client.api</apiPackage>
                             <modelPackage>com.nedap.retail.client.model</modelPackage>
@@ -186,7 +172,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-version}</version>
+                <version>3.6.1</version>
                 <configuration>
                     <source>${java-version}</source>
                     <target>${java-version}</target>
@@ -202,30 +188,6 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>copy-artifact</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>${project.artifactId}</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>${project.packaging}</type>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>../target</outputDirectory>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
