--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,53 +4,13 @@
 
     <groupId>com.nedap.retail.services</groupId>
     <artifactId>api</artifactId>
+    <name>Nedap Retail !D Cloud API</name>
     <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <properties>
-        <jodatime-version>2.9.4</jodatime-version>
-        <junit-version>4.12</junit-version>
-        <slf4j-version>1.7.21</slf4j-version>
-        <maven-surefire-version>2.18.1</maven-surefire-version>
-        <maven-release-version>2.5.2</maven-release-version>
-        <maven-compiler-version>3.3</maven-compiler-version>
-        <maven-deploy-version>2.8.2</maven-deploy-version>
-        <java-version>1.7</java-version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
 
     <modules>
         <module>client</module>
         <module>examples</module>
     </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <scope>test</scope>
-                <version>${junit-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>joda-time</groupId>
-                <artifactId>joda-time</artifactId>
-                <version>${jodatime-version}</version>
-            </dependency>
-
-            <!-- Base64 encoding that works in both JVM and Android -->
-            <dependency>
-                <groupId>com.brsanthu</groupId>
-                <artifactId>migbase64</artifactId>
-                <version>2.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-nop</artifactId>
-                <version>${slf4j-version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
 </project>
